# stellr

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
Docker/it/: Dockerfile
Docker/it-prepopulated/: Dockerfile
src/: config.rs  errors.rs  lib.rs  prelude.rs  response_types.rs
src/clients/: admin_methods.rs  cloud_methods.rs  core_methods.rs  direct_solr_client.rs  mod.rs  zk_solr_client.rs
src/requests/: mod.rs  solr_request.rs  solr_request_builder.rs  solr_request_builder2.rs
src/response_types/: admin_cores.rs  collections_list.rs  mod.rs  select.rs  update.rs
tests/: tests.rs
tests/asynchronous/: integration_tests.rs  mock_tests.rs  mod.rs  quick_test.rs
tests/blocking/: integration_tests.rs  mock_tests.rs  mod.rs
tests/it/: mod.rs
tests/sample_data/: core_admin.json
