[package]
name = "stellr"
version = "0.2.0"
authors = ["Steve Hunt <steve@logophage.net>", "Jacob Ward <jacobbward0@gmail.com>"]
edition = "2018"
description = "A Solr client for rust"
license = "MIT OR Apache-2.0"
repository = "https://github.com/solr-rust/stellr"
readme = "README.md"
keywords = ["solr"]
categories = ["api-bindings", "database"]

[features]
default = ["async"]
async = ["reqwest/default"]
blocking = ["reqwest/blocking"]

[dependencies]
async-trait = "0.1"
chrono = "0.4"
rand = "0.7.2"
reqwest = { version = "0.11", optional = true }
serde = "1.0.101"
serde_json = "1.0"
tracing = "0.1"
url = "2.1"
zookeeper = "0.5"

[dev-dependencies]
# Waiting on shiplift 0.7 release.
# shiplift = { git = "https://github.com/softprops/shiplift.git", branch = "master" }
shiplift = "0.7"
# tokio version must be v0.2 in order for shiplift to work (panics with v0.3 currently)
tokio = { version = "1.0", features = ["macros"] }
futures = "0.3.1"
lazy_static = "1.4.0"
httpmock = "0.5"
